--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   </div>
   <!-- Footer -->
   <footer class="my-footer">
-    <div class="hero my-hero" style=" banner: url(../img/azul.jpg); --bg-atachment: none;">
+    <div class="hero my-hero" style=" --banner: url(../img/azul.jpg); --bg-atachment: none;">
       <div class="container-hero">
         <div class="columns is-multiline">
           <div class="column is-full has-text-centered">
